.k8s/deployment-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imis-client
  labels:
    app: imis-client
spec:
  replicas: 3
  selector:
    matchLabels:
      app: imis-client
  template:
    metadata:
      labels:
        app: imis-client
    spec:
      containers:
      - name: imis-client
        image: client-image
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health.html
            port: 8080
          initialDelaySeconds: 10
          timeoutSeconds: 2
          periodSeconds: 3
          failureThreshold: 1
        livenessProbe:
            httpGet:
              path: /health.html
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 2
            periodSeconds: 8
            failureThreshold: 1
