.k8s/deployment-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imis-server
  labels:
    app: imis-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: imis-server
  template:
    metadata:
      labels:
        app: imis-server
    spec:
      containers:
      - name: imis-server
        image: server-image
        ports:
        - containerPort: 80
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql
          readOnly: true
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.14
        command: ["/cloud_sql_proxy",
                  "-instances=challenge-11=tcp:5432",
          # If running on a VPC, the Cloud SQL proxy can connect via Private IP. See:
          # https://cloud.google.com/sql/docs/mysql/private-ip for more info.
          # "-ip_address_types=PRIVATE",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        securityContext:
          runAsUser: 2  # non-root user
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql
          readOnly: true
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql
